--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -31,11 +31,11 @@ add_executable(search_excel)
 #set_target_properties(search_excel PROPERTIES SOURCES "${PROJECT_SOURCE_DIR}/src/excel_search_service_3.cpp")
 set_target_properties(search_excel PROPERTIES SOURCES "${PROJECT_SOURCE_DIR}/src/listern_clipboard_1.cpp")
 #set_target_properties(search_excel PROPERTIES SOURCES "${PROJECT_SOURCE_DIR}/src/search_excel_all_sheets_gui_2.cpp")
-set_target_properties(search_excel PROPERTIES OUTPUT_NAME "excel_search_service")
+set_target_properties(search_excel PROPERTIES OUTPUT_NAME "search_book_service")
 
 set_target_properties(search_excel PROPERTIES RUNTIME_OUTPUT_DIRECTORY "${PROJECT_SOURCE_DIR}/bin")
 target_link_libraries(search_excel  OpenXLSX::OpenXLSX boost_algorithm_lib Comctl32 Shlwapi user32)
 
 set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -lstdc++ -std=c++17 -g -Wall  -O2 -mconsole -municode ")
 #set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -lstdc++ -std=c++17 -g -Wall  -O2 -mwindows -municode ")
-# .\excel_search_service.exe  mode=debug filename=C:\Users\dsm\Desktop\20250304.xlsm outdetail=1 column=A tofile=0
+#.\search_book_service.exe -f C:/Users/dsm/Desktop/20250304.xlsm -d -l C:/Users/dsm/Desktop/search_log.txt
